--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,11 @@ dependencies:
   google_fonts: ^5.1.0
   intl: ^0.18.0
   url_launcher: ^6.1.12
+  font_awesome_flutter: ^10.5.0
+  screenshot: ^2.1.0
+  permission_handler: ^10.4.2
+  path_provider: ^2.0.15
+  share_plus: ^7.0.2
 
 dev_dependencies:
 
